@@ -16,6 +16,15 @@ setenv =
 commands=
     {envpython} -m pytest tests/ {posargs}
 
+[testenv:sphinx20]
+deps=
+    six
+    pytest
+    sqlalchemy
+    whoosh
+    mock
+    Sphinx>=2.0.0b1
+
 [testenv:flake8]
 deps=
     flake8
